<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.cyan</groupId>
        <artifactId>cyan-dataman</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>cyan-dataman-application</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>cyan-dataman-client</artifactId>
        </dependency>
        <!-- OpenCSV -->
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.12.0</version> <!-- 最新版本可查询 Maven 仓库 -->
        </dependency>
        <dependency>
            <groupId>com.cyan</groupId>
            <artifactId>arch-base</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-aws-bundle</artifactId>
        </dependency>
        <!-- Spark Core + SQL -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.binary.version}</artifactId>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-launcher_${scala.binary.version}</artifactId>
        </dependency>
        <!-- Iceberg Spark runtime (for Spark 3.5) -->
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-spark-runtime-3.5_${scala.binary.version}</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.iceberg</groupId>
            <artifactId>iceberg-core</artifactId>
        </dependency>

        <!-- Gravitino 客户端依赖 -->
        <dependency>
            <groupId>org.apache.gravitino</groupId>
            <artifactId>gravitino-client-java-runtime</artifactId>
            <version>1.1.0</version>
        </dependency>

        <!-- Hadoop S3A核心依赖，需与Spark兼容的Hadoop版本匹配 -->
        <!-- Optional: Hadoop client if you want to use Iceberg on HDFS/S3 -->
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-aws</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
        </dependency><!-- 与 hadoop-3.3.6 兼容的 AWS SDK 稳定版 -->

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-client-runtime</artifactId>
        </dependency>

        <dependency>
            <groupId>com.amazonaws</groupId>
            <artifactId>aws-java-sdk-bundle</artifactId>
        </dependency>

    </dependencies>

    <build>
        <finalName>cyan-dataman</finalName>
        <plugins>
            <!-- 核心JAR打包插件（自定义JAR名称、排除不必要文件等） -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>3.3.13</version> <!-- 与父依赖版本一致 -->
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal> <!-- 关键：重新打包为可执行 JAR -->
                        </goals>
                    </execution>
                </executions>
                <!-- 可选：指定主类（如果插件未自动识别） -->
                <configuration>
                    <mainClass>com.cyan.dataman.Application</mainClass>
                    <!-- 修正：移除错误的 <resources> 节点，仅保留 groupId/artifactId 排除 -->
                    <excludes>
                        <exclude>
                            <groupId>org.apache.hive</groupId>
                            <artifactId>hive-common</artifactId>
                        </exclude>
                    </excludes>
                    <requiresUnpack>
                        <!-- 解决 Hive 依赖在 Jar 内的类加载问题 -->
                        <dependency>
                            <groupId>org.apache.hive</groupId>
                            <artifactId>hive-exec</artifactId>
                        </dependency>
<!--                        <dependency>-->
<!--                            <groupId>org.apache.iceberg</groupId>-->
<!--                            <artifactId>iceberg-hive</artifactId>-->
<!--                        </dependency>-->
                    </requiresUnpack>
                </configuration>

            </plugin>
        </plugins>
    </build>
</project>